--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -59,7 +59,7 @@ header {
 	max-width: 100%;
 	height: auto;
 	display: block;
-	box-shadow: 0 1px 0 #ccc, 0 1px 0 1px #eee;
+	box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 	border-radius: 2px;
 	margin-left: auto;
 	margin-right: auto;
